fixed section food spacings

--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -211,15 +211,33 @@
   width: 100vw;
 }
 .section_play_container {
-  margin-top: 70px;
+  margin-top: 40px;
   margin-left: 200px;
   display: flex;
   flex-direction: column;
 }
+.section_play_container .btn {
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 0.2em;
+  line-height: 2.6rem;
+}
+.section_play_container .btn::before{
+  content: "";
+  display: inline-block;
+  width: 5px;
+  height: 8px;
+  background-image: url("/assets/img/common/arrow_on_btn.png");
+  background-size: contain;
+  vertical-align: middle;
+  position: relative;
+  top: 1px;
+}
 .section_play_title {
   font-size: 4rem;
+  font-weight: 400;
   letter-spacing: 0.2em;
-  line-height: 4.8rem;
+  line-height: 5.8rem;
 }
 .section_play_title_logo {
   position: relative;
@@ -229,14 +247,15 @@
   content: url("/assets/img/top/section_play_title_logo.png");
   display: inline-block;
   transform: scale(0.5);
-  left: -70px;
-  top: -60px;
+  left: -75px;
+  top: -67px;
 }
 .section_play_description {
   margin-top: 70px;
   display: flex;
   column-gap: 100px;
   font-size: 1.4rem;
+  font-weight: 400;
   letter-spacing: 0.1em;
   line-height: 2.8rem;
 }
